[project]
name = "self-forcing"
version = "0.1.0"
description = "Self-Forcing video generation"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "opencv-python>=4.9.0.80",
    "diffusers==0.31.0",
    "transformers>=4.49.0",
    "tokenizers>=0.20.3",
    "accelerate>=1.1.1",
    "tqdm",
    "imageio",
    "easydict",
    "ftfy",
    "dashscope",
    "imageio-ffmpeg",
    "numpy>=1.26.0",
    "wandb",
    "omegaconf",
    "einops",
    "av==13.1.0",
    "open-clip-torch",
    "starlette",
    "pycocotools",
    "lmdb",
    "matplotlib",
    "sentencepiece",
    "pydantic==2.10.6",
    "scikit-image",
    "huggingface-hub[cli]",
    "dominate",
    "onnx",
    "onnxruntime",
    "onnxscript",
    "onnxconverter-common",
    "flask",
    "flask-socketio",
    "torchao",
    "clip @ git+https://github.com/openai/CLIP.git",
    "flash-attn>=2.8.3",
    "nvidia-cudnn-cu13>=9.19.0.56",
]


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
